logs/Slang/chapter-6/6.12--real_bit_select_idx.sv.log
name: real_bit_select
description: real bit select tests
should_fail: 1
tags: 6.12
files: /home/travis/build/SymbiFlow/sv-tests/tests/chapter-6/6.12--real_bit_select_idx.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-6/6.12--real_bit_select_idx.sv:12:15: error: expression must be integral
	assign c = b[a];
	             ^
